# pytest-jtr

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  RELEASE.md  RELEASE_NOTES.md  bandit.yml  buildspec.yml  noxfile.py  poetry.toml  pyproject.toml  sample_report.json  tox.ini
.github/workflows/: main.yml  release.yml
scripts/: release_process.py
tests/: conftest.py  test_jsonreport.py
