[tool.poetry]
name = "pytest-jtr"
version = "0.1.0"
description = ""
authors = ["Gleams API user <Stephen.Swannell+ghapi@gmail.com>"]
license = "MIT"

[tool.poetry.plugins]
pytest11 = { jtr = "pytest_jtr.plugin" }

[tool.poetry.dependencies]
python = ">=3.9,<3.11.0"
pytest = "^7.1.2"
pytest-metadata = "^2.0.1"
loguru = "^0.6.0"
pytest-xdist = "^2.5.0"
nox = "^2022.1.7"

[tool.poetry.dev-dependencies]
tox = "^3.25.0"
nox = "^2022.1.7"
nox-poetry = "^1.0.0"
bandit = "^1.7.4"
safety = "^1.10.3"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.961"
coverage = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
